--- a/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderList.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderList.cshtml
@@ -95,6 +95,7 @@
                                 <span data-ng-bind="saleOrder.id | orderNumber"></span>
                             </a>
                             <span class="hint" data-ng-show="saleOrder.draft" data-translate="Draft"></span>
+                            <span class="hint primary" data-ng-show="saleOrder.budget" data-translate="Budget"></span>
                         </p>
                         <p data-ng-bind="saleOrder.store"></p>
                         <p class="font-11 text-muted">
