--- a/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderDetails.cshtml
@@ -39,10 +39,14 @@
 
             @using (Html.Authorize("sale-orders.edit"))
             {
+                <button type="button" class="success" data-translate="Confirm" data-ng-click="controller.showConfirmDialog()"
+                        data-ng-hide="controller.saleOrder.confirmed"></button>
                 <a href="/sale-orders/edit/{{controller.saleOrder.id}}" class="as-button" data-translate="Edit"
                     data-ng-hide="controller.saleOrder.confirmed"></a>
                 <button type="button" class="danger" data-translate="Remove" data-ng-click="controller.showRemoveDialog()"
                         data-ng-hide="controller.saleOrder.confirmed"></button>
+                <button type="button" class="danger" data-translate="Revert" data-ng-click="controller.showRevertDialog()"
+                        data-ng-show="controller.saleOrder.confirmed"></button>
             }
         </div>
 
@@ -96,6 +100,8 @@
 
     @using (Html.Authorize("sale-orders.edit"))
     {
+        @Html.Partial("~/Views/Commercial/SaleOrders/_ConfirmSaleOrder.cshtml")
         @Html.Partial("~/Views/Commercial/SaleOrders/_RemoveSaleOrder.cshtml")
+        @Html.Partial("~/Views/Commercial/SaleOrders/_RevertSaleOrder.cshtml")
     }
 </div>
